<resources>
    <string name="app_name">么么哒KID</string>
    <string name="action_settings">设置</string>
    <string name="action_manage_publish">发布</string>
    <string name="action_add_kid">添加宝贝</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">么么哒KID</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_settings">设置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_publish_image">发布</string>
    <string name="action_publish_video">发布</string>
    <string name="search_title">search......</string>
    <string name="search_hint">搜你想搜的</string>
    <string name="action_search">搜索</string>
    <string name="action_refresh">refresh</string>
    <string name="action_share">分享</string>
    <string name="action_share_to">分享到</string>
    <string name="action_favorite">favorite</string>
    <string name="loading">加载中...</string>
    <string name="no_more_data">暂时没有更多数据了</string>
    <string name="actionn_load_more">刚刚看到这里,点击刷新</string>
    <string name="action_retry">重试</string>
    <string name="action_cancel">取消</string>
    <string name="action_ok">确定</string>
    <string name="action_continue">继续上传</string>
    <string name="action__cancel_uploading">放弃上传</string>
    <string name="profile_avatar">头像</string>
    <string name="profile_nick_name">昵称</string>
    <string name="profile_signature">签名</string>
    <string name="profile_email">邮箱</string>
    <string name="profile_cell">手机</string>
    <string name="profile_password">修改密码</string>
    <string name="homepage_following">关注</string>
    <string name="homepage_follower">粉丝</string>
    <string name="homepage_no_signature">太懒了,啥也没留下</string>
    <string name="homepage_follow">关注</string>
    <string name="homepage_followed">已关注</string>
    <string name="volley_error_generic_timeout">网络连接超时~！</string>
    <string name="volley_error_generic_parse">Json数据错误~！</string>
    <string name="volley_error_generic_network">服务器无法连接~！</string>
    <string name="volley_error_generic_no_connection">无网络连接~！</string>
    <string name="volley_error_generic_auth_failure">无法认证用户~！</string>
    <string name="volley_error_generic_server">服务器响应错误~！</string>
    <string name="volley_error_generic_error">网络异常,请稍后再试~！</string>
    <string name="share_description_empty">下载么么哒KID APP观看更多精彩内容,做合格家长</string>
    <string name="send_comment_hint">写评论</string>
    <string name="send_comment">评论</string>
    <string name="error_invalid_comment">The comment is too short or is invalid.</string>
    <string name="send_comment_success">发送评论成功</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_identity">手机/邮箱/用户名</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_repeat">重复密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册新用户</string>
    <string name="action_forgot">忘记密码</string>
    <string name="oauth_login">使用第三方账号登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_login">This user name or the password is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_identity">This identity is too invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_not_equal_password">The password and the repeat password is not equal </string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="update">升级</string>
    <string name="skip_ad">跳过广告</string>
    <string name="original_password">请输入原始密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="location_unkown">未知位置</string>
    <string name="location_not_support_gps">GPS服务不可用</string>
    <string name="location_not_support_network">网络位置服务不可用</string>
    <string name="register_phone">手机注册</string>
    <string name="register_email">邮箱注册</string>
    <string name="register_password">密码,由6位(含)以上数字及字母组成</string>
    <string name="prompt_phone_number">手机号</string>
    <string name="prompt_verification_code">验证码</string>
    <string name="prompt_get_verification_code">获取短信验证码</string>
    <string name="prompt_waiting_verification_code">等待验证码</string>
    <string name="prompt_verification_code_sent">短信验证码已发送</string>
    <string name="register_already">已经有么么哒KID账号?去登录</string>
    <string name="reset_password_by_phone">手机找回</string>
    <string name="reset_password_by_email">邮箱找回</string>
    <string name="reset_password_next_step">下一步</string>
    <string name="error_invalid_phone">请输入正确的手机号码</string>
    <string name="error_phone_not_exist">手机号码未注册</string>
    <string name="action_reset_password">修改</string>
    <string name="channel_name">频道名称</string>
    <string name="channel_key_words">频道关键词</string>
    <string name="channel_option_delete">删除</string>
    <string name="channel_option_edit">编辑</string>
    <string name="error_invalid_realName">This real name is too short</string>
    <string name="error_invalid_nickName">This nick name is too short</string>
    <string name="error_invalid_birthday">This birthday is wrong</string>
    <string name="action_logout">退出登录</string>
    <string name="message_latest_version">已是最新版本</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_check_version">检查版本</string>
    <string name="pref_title_ads_browsing">封面广告</string>
    <string name="pref_title_policy">么么哒KID用户使用协议</string>
    <string name="pref_title_web">@么么哒 mmdkid.cn</string>
    <string name="pref_action_quit">退出登录</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="favorites_title">选择您喜欢的频道</string>
    <string name="favorites_summary">选择您喜欢的频道</string>
    <string name="favorites_dialog_title">选择您喜欢的频道</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_signup">注册</string>
    <string name="title_activity_star">收藏</string>
    <string name="title_activity_follow">关注</string>
    <string name="title_activity_history">历史</string>
    <string name="title_activity_channel">频道</string>
    <string name="title_activity_publish_image">图片</string>
    <string name="title_activity_publish_post">文章</string>
    <string name="title_activity_publish_video">视频</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_diary_list">DiaryListActivity</string>
    <string name="title_activity_user_group_post_list">UserGroupPostListActivity</string>
    <string name="tip_need_login">需要登录增加关注</string>
    <string name="action_login">登录</string>
    <string name="tip_drag">长按编辑,拖拽排序</string>
    <string name="tip_option">长按编辑或删除</string>
    <string name="my_cahnnel">我的频道</string>
    <string name="other_channel">其他频道</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="new_channel">自定义</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_publish_manager">我的发布</string>
    <string name="title_activity_profile">个人资料</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_reset_password">密码重置</string>
</resources>