<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mmdkid.mmdkid.LoginActivity"
    tools:showIn="@layout/activity_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.mmdkid.mmdkid.LoginActivity"
        >

        <!-- Login progress -->
        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/identity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_identity"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autoText="false"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/action_sign_in"
                    android:textColor="?android:attr/colorForegroundInverse"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvForgetPassword"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:text="@string/action_forgot"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/register"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/oauth_login" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <com.facebook.drawee.view.SimpleDraweeView
                            android:id="@+id/wxLogin"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            fresco:placeholderImage ="@drawable/umeng_socialize_wechat"
                            fresco:roundAsCircle="true"
                            fresco:roundingBorderWidth = "1dp"
                            fresco:roundingBorderColor = "@android:color/darker_gray"
                            android:layout_weight="1"/>

                        <com.facebook.drawee.view.SimpleDraweeView
                            android:id="@+id/qqLogin"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            fresco:placeholderImage ="@drawable/umeng_socialize_qq"
                            fresco:roundAsCircle="true"
                            fresco:roundingBorderWidth = "1dp"
                            fresco:roundingBorderColor = "@android:color/darker_gray"
                            android:layout_weight="1"/>

                        <com.facebook.drawee.view.SimpleDraweeView
                            android:id="@+id/sinaLogin"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            fresco:placeholderImage ="@drawable/umeng_socialize_sina"
                            fresco:roundAsCircle="true"
                            fresco:roundingBorderWidth = "1dp"
                            fresco:roundingBorderColor = "@android:color/darker_gray"
                            android:layout_weight="1"/>

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
